--- a/src/pages/NewApproval/style.scss
+++ b/src/pages/NewApproval/style.scss
@@ -49,11 +49,8 @@
 
                 }
             }
-
         }
-
     }
-
 
 }
 
@@ -67,29 +64,28 @@
         .input {
             display: flex;
             flex-direction: column;
-            padding-bottom: 50px;
+            padding-bottom: 20px;
 
             .input-top {
                 padding-bottom: 20px;
                 display: flex;
-                // justify-content: space-between;
-
-
-
-                .input-element {
-                    width: 24%;
-                    margin-right: 25px;
-
-                }
-            }
-
-            .input-bot {
-                display: flex;
-                // justify-content: space-between;
 
                 .input-element {
                     width: 24%;
                     margin-right: 20px;
+
+                }
+
+            }
+
+            .input-bot {
+                display: flex;
+
+                .input-element {
+                    width: 24%;
+                    margin-right: 20px;
+
+                    // .text-input-container {}
                 }
             }
         }
@@ -112,4 +108,18 @@
         }
     }
 
+    // .signapproval-container {}
+
+
+
+}
+
+.filter-option {
+    display: flex;
+    flex-direction: column;
+
+    span {
+        line-height: normal;
+        color: #2F85EF;
+    }
 }
