--- a/src/components/ButtonSelect/style.scss
+++ b/src/components/ButtonSelect/style.scss
@@ -1,69 +1,93 @@
-@media (max-width:767px) {}
+@media (max-width:767px) {
 
-.approve-sign {
-    padding-top: 10px;
-    display: flex;
-    width: 100%;
-    // justify-content: space-between;
-    flex-flow: row wrap;
+    .approve-sign {
+        padding-top: 10px;
+        display: flex;
+        width: 100%;
+        flex-flow: row wrap;
 
-    .btn-add {
-        text-align: center;
-        justify-content: center;
-        height: 50px;
-        margin-top: 35PX;
-        // width: calc(100%/8);
-        width: 120px;
-        margin-left: 30PX;
+        .btn-add {
+            text-align: center;
+            justify-content: center;
+            height: 50px;
 
+            width: 120px;
+            margin-left: 30PX;
+            margin-top: 50px;
 
+        }
 
+        .btn-selection-container {
+            padding-left: 30px;
+            display: flex;
+            flex-direction: column;
+            width: calc(100%/2.5);
+            margin-bottom: 20px;
 
-        @media (min-width:768px) {
-
-            .approve-sign {
-                padding-top: 10px;
+            .label {
+                margin-bottom: -5px;
                 display: flex;
-                width: 100%;
-                flex-flow: row wrap;
-
-                .btn-add {
-                    text-align: center;
-                    justify-content: center;
-                    height: 50px;
-
-                    width: 120px;
-                    margin-left: 30PX;
-                    margin-top: 50px;
-
-                }
-
-                .btn-selection-container {
-                    padding-left: 30px;
-                    display: flex;
-                    flex-direction: column;
-                    width: calc(100%/3.3);
-                    margin-bottom: 20px;
-
-                    .label {
-                        margin-bottom: -5px;
-                        display: flex;
-                        flex-direction: row;
-                        font-weight: bold;
-                    }
-
-                    .selection {
-                        .ant-select {
-                            width: 100%;
-                            height: 50px;
-                        }
-
-
-                    }
-
-
-                }
+                flex-direction: row;
+                font-weight: bold;
             }
+
+            .selection {
+                .ant-select {
+                    width: 100%;
+                    height: 50px;
+                }
+
+
+            }
+
+
+        }
+    }
+}
+
+@media (min-width:768px) {
+
+    .approve-sign {
+        padding-top: 10px;
+        display: flex;
+        width: 100%;
+        flex-flow: row wrap;
+
+        .btn-add {
+            text-align: center;
+            justify-content: center;
+            height: 50px;
+
+            width: 120px;
+            margin-left: 30PX;
+            margin-top: 50px;
+
+        }
+
+        .btn-selection-container {
+            padding-left: 30px;
+            display: flex;
+            flex-direction: column;
+            width: calc(100%/3.3);
+            margin-bottom: 20px;
+
+            .label {
+                margin-bottom: -5px;
+                display: flex;
+                flex-direction: row;
+                font-weight: bold;
+            }
+
+            .selection {
+                .ant-select {
+                    width: 100%;
+                    height: 50px;
+                }
+
+
+            }
+
+
         }
     }
 }
